--- a/group_vars/db_server.yml
+++ b/group_vars/db_server.yml
@@ -7,7 +7,7 @@ mysql_log_bin: /var/lib/mysql/mysql_binary_log
 mysql_log: /var/log/mysqld.log
 mysql_pid_dir: /var/run/mysqld
 mysql_pid_file: "{{ mysql_pid_dir }}/mysqld.pid"
-mysql_root_password: changeme
+mysql_root_password: password
 
 databases:
   scm:
