--- a/roles/scm/tasks/api.yml
+++ b/roles/scm/tasks/api.yml
@@ -4,5 +4,7 @@
 - name: Install Python PIP
   yum: name=python-pip state=latest update_cache=yes
 
-- name: Install CM Python API Client
-  pip: name=cm-api
+  #- name: Install CM Python API Client
+  #  pip: 
+  #   name: cm-api
+
