krb5 default realm

--- a/group_vars/krb5_server.yml
+++ b/group_vars/krb5_server.yml
@@ -1,6 +1,8 @@
 ---
 
 # 'ad', 'mit', or 'none' to disable security
+default_realm: "{{krb5_realm}}"
+
 krb5_kdc_type: mit
 
 krb5_kdc_master_passwd: changeme
