--- a/roles/scm/tasks/api.yml
+++ b/roles/scm/tasks/api.yml
@@ -2,9 +2,16 @@
 # https://cloudera.github.io/cm_api/docs/python-client/
 
 - name: Install Python PIP
-  yum: name=python-pip state=latest update_cache=yes
+  yum: 
+    name: python-pip
+    state: latest
+    update_cache: yes
+  delegate_to: localhost
 
-  #- name: Install CM Python API Client
-  #  pip: 
-  #   name: cm-api
+- name: Install CM Python API Client
+  pip: 
+    name: cm-api
+    state: present
+  delegate_to: localhost
+
 
